# NeuroSteer

./: .gitignore  README.md  pyproject.toml  validated-cpu-requirements.txt
neurosteer/: __init__.py  basis.py  capture.py  catalog.py  pairs.py  rules.py  session.py  trace.py  write.py
tests/: conftest.py  test_basis.py  test_capture.py  test_catalog.py  test_rules.py  test_session.py  test_write.py
