[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neurosteer"
version = "0.1.0"
description = "Stepwise activation steering tools for Llama-style decoder models"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "torch>=2.1",
    "transformers>=4.37",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools]
packages = ["neurosteer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
